# drivers_framework

./: LICENSE  OAT.xml  README.md  README_zh.md  bundle.json
adapter/: .gitignore  BUILD.gn  LICENSE  README.md  README_zh.md
adapter/khdf/linux/: .gitignore  Kconfig  Makefile  OAT.xml  README.md  README_zh.md  patch_hdf.sh
adapter/khdf/linux/test/test_helper_driver/: BUILD.gn
adapter/khdf/linux/test/test_helper_driver/src/: Makefile  test_helper_driver.c
adapter/khdf/liteos/: BUILD.gn  Kconfig  README.md  README_zh.md  hdf.gni  hdf_driver.mk  hdf_lite.mk  lite.mk
adapter/khdf/liteos_m/: BUILD.gn  README.md  README_zh.md  hdf.gni
adapter/platform/: BUILD.gn
adapter/platform/can/: can_virtual.c
adapter/platform/gpio/: BUILD.gn  gpio_bes.c  gpio_stm32f4xx.c  gpio_wm.c
adapter/platform/i2c/: BUILD.gn  i2c_bes.c  i2c_stm32f4xx.c
adapter/platform/pwm/: BUILD.gn  pwm_bes.c  pwm_stm32f4xx.c  pwm_wm.c
adapter/platform/spi/: BUILD.gn  spi_bes.c  spi_stm32f4xx.c  spi_wm.c
adapter/platform/uart/: BUILD.gn  uart_bes.c  uart_stm32f4xx.c
adapter/platform/watchdog/: BUILD.gn  watchdog_bes.c  watchdog_stm32f4xx.c  watchdog_wm.c
adapter/uhdf/: README.md  README_zh.md  uhdf.gni
adapter/uhdf/manager/: BUILD.gn
adapter/uhdf/platform/: BUILD.gn
adapter/uhdf/posix/: BUILD.gn
adapter/uhdf/posix/old/: BUILD.gn
adapter/uhdf/test/: BUILD.gn
adapter/uhdf/test/unittest/manager/: BUILD.gn
adapter/uhdf/test/unittest/osal/: BUILD.gn
adapter/uhdf/test/unittest/platform/: BUILD.gn
adapter/uhdf2/: README.md  README_zh.md  hdi.gni  uhdf.gni
adapter/uhdf2/hcs/: BUILD.gn
adapter/uhdf2/hdi/: BUILD.gn
adapter/uhdf2/hdi/test/hdi_sample/sample_client_cpp/: BUILD.gn  sample_client_cpp_test.cpp
adapter/uhdf2/hdi/test/hdi_sample/sample_client_cpp/unittest/: BUILD.gn  foo_proxy.cpp  foo_proxy.h  sample_proxy.cpp  sample_proxy.h
adapter/uhdf2/hdi/test/hdi_sample/sample_service_cpp/: BUILD.gn  foo_service.cpp  foo_service.h  foo_stub.cpp  foo_stub.h  ifoo.h  isample.h  sample_driver.cpp  sample_service.cpp  sample_service.h  sample_service_stub.cpp  sample_service_stub.h
adapter/uhdf2/host/: BUILD.gn
adapter/uhdf2/ipc/: BUILD.gn
adapter/uhdf2/manager/: BUILD.gn  hdf_devmgr.cfg
adapter/uhdf2/platform/: BUILD.gn
adapter/uhdf2/security/: BUILD.gn
adapter/uhdf2/test/: BUILD.gn
adapter/uhdf2/test/unittest/manager/: BUILD.gn
adapter/uhdf2/test/unittest/osal/: BUILD.gn
adapter/uhdf2/utils/: BUILD.gn
core/common/src/: devmgr_service_start.c
core/host/src/: devhost_service.c  hdf_device_node.c  hdf_device_object.c  hdf_driver_loader.c
core/manager/include/: devsvc_manager.h
core/manager/src/: devhost_service_clnt.c  (+3 more)
framework/: LICENSE  README.md  README_zh.md
framework/support/platform/test/fuzztest/: BUILD.gn  fuzz.gni  random.h
framework/support/platform/test/fuzztest/gpio_fuzzer/: BUILD.gn  gpio_fuzzer.cpp  gpio_fuzzer.h  project.xml
framework/support/platform/test/fuzztest/gpio_fuzzer/corpus/: init
framework/support/platform/test/fuzztest/i2c_fuzzer/: BUILD.gn  i2c_fuzzer.h
framework/support/platform/test/fuzztest/pwm_fuzzer/: BUILD.gn  pwm_fuzzer.cpp  pwm_fuzzer.h
framework/support/platform/test/fuzztest/rtc_fuzzer/: BUILD.gn  rtc_fuzzer.h
framework/support/platform/test/fuzztest/spi_fuzzer/: BUILD.gn  project.xml  spi_fuzzer.cpp
framework/support/platform/test/fuzztest/uart_fuzzer/: BUILD.gn  uart_fuzzer.cpp
framework/support/platform/test/fuzztest/watchdog_fuzzer/: BUILD.gn
framework/test/fuzztest/: BUILD.gn
framework/test/fuzztest/hdimanager/loaddevice_fuzzer/: BUILD.gn  loaddevice_fuzzer.h
framework/test/fuzztest/hdimanager/registerservicestatuslistener_fuzzer/: BUILD.gn
framework/test/fuzztest/hdimanager/unloaddevice_fuzzer/: BUILD.gn
framework/test/fuzztest/ioservice/ioservicebind_fuzzer/: BUILD.gn  ioservicebind_fuzzer.cpp
framework/test/fuzztest/ioservice/ioservicegrouplisten_fuzzer/: BUILD.gn  ioservicegrouplisten_fuzzer.cpp  project.xml
framework/test/fuzztest/ioservice/ioservicelisten_fuzzer/: BUILD.gn
framework/test/fuzztest/ioservice/ioservicenamegetbydeviceclass_fuzzer/: BUILD.gn  ioservicenamegetbydeviceclass_fuzzer.h
framework/test/fuzztest/ioservice/ioserviceremove_fuzzer/: BUILD.gn  ioserviceremove_fuzzer.cpp
include/audio/: audio_codec_if.h  audio_dai_if.h
include/core/: hdf_io_service_if.h
include/platform/: can_if.h  timer_if.h
include/utils/: hcs_macro.h  hdf_base.h
include/wifi/: wifi_inc.h  wifi_mac80211_ops.h
support/platform/test/fuzztest/: BUILD.gn  fuzz.gni
support/platform/test/fuzztest/gpio_fuzzer/: BUILD.gn  gpio_fuzzer.cpp  gpio_fuzzer.h  project.xml
support/platform/test/fuzztest/i2c_fuzzer/: BUILD.gn  i2c_fuzzer.cpp  i2c_fuzzer.h  project.xml
support/platform/test/fuzztest/pwm_fuzzer/: BUILD.gn  project.xml  pwm_fuzzer.cpp  pwm_fuzzer.h
support/platform/test/fuzztest/pwm_fuzzer/corpus/: init
support/platform/test/fuzztest/rtc_fuzzer/: BUILD.gn  project.xml  rtc_fuzzer.cpp
support/platform/test/fuzztest/spi_fuzzer/: BUILD.gn  spi_fuzzer.cpp  spi_fuzzer.h
support/platform/test/fuzztest/uart_fuzzer/: BUILD.gn  project.xml  uart_fuzzer.cpp  uart_fuzzer.h
support/platform/test/fuzztest/watchdog_fuzzer/: BUILD.gn  project.xml  watchdog_fuzzer.cpp  watchdog_fuzzer.h
test/fuzztest/: BUILD.gn
test/fuzztest/hdimanager/registerservicestatuslistener_fuzzer/: BUILD.gn  registerservicestatuslistener_fuzzer.cpp
test/fuzztest/hdimanager/registerservicestatuslistener_fuzzer/corpus/: init
test/fuzztest/ioservice/ioservicebind_fuzzer/: BUILD.gn  ioservicebind_fuzzer.cpp  ioservicebind_fuzzer.h
test/fuzztest/ioservice/ioserviceremove_fuzzer/: BUILD.gn  ioserviceremove_fuzzer.cpp  ioserviceremove_fuzzer.h
tools/hcs-view/: OWNER  README_zh.md  build.py  index.html  package.json  webpack.config.js
tools/hdf_dbg/: BUILD.gn  hdf_dbg.cpp
tools/hdf_dev_eco_tool/: hdf_tool_settings.py  hdf_utils.py
tools/hdi-gen/: MakefileLinux  MakefileWin  build_hdi_files.py  main.cpp
utils/include/: hdf_message_looper.h
utils/src/: hdf_map.c  hdf_object_alloc.c  hdf_sbuf.c
(+752 files in other folders)
