# Copyright (c) 2020-2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("hdf_osal_pub_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "//drivers/hdf_core/framework/include",
    "//drivers/hdf_core/framework/include/osal",
    "//drivers/hdf_core/framework/include/utils",
    "//drivers/hdf_core/adapter/uhdf/posix/include",
    "//base/hiviewdfx/hilog_lite/interfaces/native/innerkits",
    "//third_party/bounds_checking_function/include",
  ]
}
if (defined(ohos_lite)) {
  ohos_shared_library("hdf_posix_osal") {
    output_extension = "z.so"
    include_dirs = []

    public_configs = [ ":hdf_osal_pub_config" ]

    sources = [
      "//drivers/hdf_core/framework/support/posix/src/osal_mem.c",
      "//drivers/hdf_core/framework/support/posix/src/osal_mutex.c",
      "//drivers/hdf_core/framework/support/posix/src/osal_sem.c",
      "//drivers/hdf_core/framework/support/posix/src/osal_spinlock.c",
      "//drivers/hdf_core/framework/support/posix/src/osal_thread.c",
      "//drivers/hdf_core/framework/support/posix/src/osal_time.c",
    ]

    deps = [
      "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_shared",
      "//third_party/bounds_checking_function:libsec_shared",
    ]

    defines = [ "__USER__" ]
    ldflags = [ "-lpthread" ]
    cflags = [
      "-Wall",
      "-Wextra",
      "-Werror",
      "-fsigned-char",
      "-fno-common",
      "-fno-strict-aliasing",
      "-Wno-format",
      "-Wno-format-extra-args",
    ]

    # install_images = [ "vendor" ]
    subsystem_name = "hdf"
    part_name = "hdf_core"
  }
} else {
  group("hdf_posix_osal") {
    deps = []
  }
}
