# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/test.gni")

unittest("hdf_adapter_uhdf_test_manager") {
  output_extension = "bin"
  output_dir = "$root_out_dir/test/unittest/hdf"
  include_dirs = [
    "//third_party/googletest/googletest/include",
    "//third_party/bounds_checking_function/include",

    "//drivers/hdf_core/framework/include/platform",
    "//drivers/hdf_core/framework/include/core",
    "//drivers/hdf_core/framework/core/common/include/host",
    "//drivers/hdf_core/framework/core/shared/include",
    "//drivers/hdf_core/framework/include/osal",
    "//drivers/hdf_core/adapter/uhdf/posix/include",
    "//drivers/hdf_core/framework/include/utils",
    "//drivers/hdf_core/framework/include",
    "//drivers/hdf_core/framework/test/unittest/include",
    "//drivers/hdf_core/framework/test/unittest/manager",
    "//base/hiviewdfx/hilog_lite/interfaces/native/innerkits",
  ]

  defines = [ "__USER__" ]
  sources = [ "//drivers/hdf_core/framework/core/manager/test/unittest/common/hdf_lite_manager_test.cpp" ]
  deps = [
    "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_shared",
    "//drivers/hdf_core/adapter/build/test_common:libhdf_test_common",
    "//drivers/hdf_core/adapter/uhdf/manager:hdf_core",
    "//drivers/hdf_core/adapter/uhdf/posix:hdf_posix_osal",
  ]
  public_deps = [ "//third_party/bounds_checking_function:libsec_shared" ]
  cflags = [
    "-Wall",
    "-Wextra",
    "-Werror",
    "-fsigned-char",
    "-fno-common",
    "-fno-strict-aliasing",
  ]
}

unittest("hdf_adapter_uhdf_test_ioservice") {
  output_extension = "bin"
  output_dir = "$root_out_dir/test/unittest/hdf"
  include_dirs = [
    "//third_party/googletest/googletest/include",
    "//third_party/bounds_checking_function/include",
    "//drivers/hdf_core/framework/include/platform",
    "//drivers/hdf_core/framework/include/core",
    "//drivers/hdf_core/framework/core/common/include/host",
    "//drivers/hdf_core/framework/core/shared/include",
    "//drivers/hdf_core/framework/include/osal",
    "//drivers/hdf_core/adapter/uhdf/posix/include",
    "//drivers/hdf_core/framework/include/utils",
    "//drivers/hdf_core/framework/include",
    "//drivers/hdf_core/framework/test/unittest/include",
    "//drivers/hdf_core/framework/test/unittest/manager",
    "//base/hiviewdfx/hilog_lite/interfaces/native/innerkits",
  ]

  defines = [ "__USER__" ]
  sources = [ "//drivers/hdf_core/framework/core/manager/test/unittest/common/hdf_ioservice_test.cpp" ]
  deps = [
    "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_shared",
    "//drivers/hdf_core/adapter/build/test_common:libhdf_test_common",
    "//drivers/hdf_core/adapter/uhdf/manager:hdf_core",
    "//drivers/hdf_core/adapter/uhdf/posix:hdf_posix_osal",
  ]
  public_deps = [ "//third_party/bounds_checking_function:libsec_shared" ]
  cflags = [
    "-Wall",
    "-Wextra",
    "-Werror",
    "-fsigned-char",
    "-fno-common",
    "-fno-strict-aliasing",
  ]
}

unittest("hdf_adapter_uhdf_test_sbuf") {
  output_extension = "bin"
  output_dir = "$root_out_dir/test/unittest/hdf"
  include_dirs = [
    "//third_party/googletest/googletest/include",
    "//third_party/bounds_checking_function/include",
    "//drivers/hdf_core/framework/include/osal",
    "//drivers/hdf_core/adapter/uhdf/posix/include",
    "//drivers/hdf_core/framework/include/utils",
    "//drivers/hdf_core/framework/include",
    "//drivers/hdf_core/framework/test/unittest/include",
    "//drivers/hdf_core/framework/test/unittest/manager",
    "//base/hiviewdfx/hilog_lite/interfaces/native/innerkits",
  ]

  defines = [ "__USER__" ]
  sources = [ "//drivers/hdf_core/framework/core/manager/test/unittest/common/hdf_sbuf_test.cpp" ]
  deps = [
    "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_shared",
    "//drivers/hdf_core/adapter/build/test_common:libhdf_test_common",
    "//drivers/hdf_core/adapter/uhdf/manager:hdf_core",
    "//drivers/hdf_core/adapter/uhdf/posix:hdf_posix_osal",
  ]
  public_deps = [ "//third_party/bounds_checking_function:libsec_shared" ]
  cflags = [
    "-Wall",
    "-Wextra",
    "-Werror",
    "-fsigned-char",
    "-fno-common",
    "-fno-strict-aliasing",
  ]
}

unittest("hdf_adapter_uhdf_test_door") {
  output_extension = "bin"
  output_dir = "$root_out_dir/test/unittest/hdf"
  include_dirs = [
    "//third_party/googletest/googletest/include",
    "//third_party/bounds_checking_function/include",
    "//drivers/hdf_core/framework/include/platform",
    "//drivers/hdf_core/framework/include/core",
    "//drivers/hdf_core/framework/core/common/include/host",
    "//drivers/hdf_core/framework/core/shared/include",
    "//drivers/hdf_core/framework/include/osal",
    "//drivers/hdf_core/adapter/uhdf/posix/include",
    "//drivers/hdf_core/framework/include/utils",
    "//drivers/hdf_core/framework/include",
    "//drivers/hdf_core/framework/test/unittest/include",
    "//drivers/hdf_core/framework/test/unittest/manager",
    "//base/hiviewdfx/hilog_lite/interfaces/native/innerkits",
  ]

  defines = [ "__USER__" ]
  sources = [
    "//drivers/hdf_core/framework/core/manager/test/unittest/common/hdf_ioservice_test.cpp",
    "//drivers/hdf_core/framework/core/manager/test/unittest/common/hdf_lite_manager_test.cpp",
    "//drivers/hdf_core/framework/core/manager/test/unittest/common/hdf_sbuf_test.cpp",
  ]
  deps = [
    "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_shared",
    "//drivers/hdf_core/adapter/build/test_common:libhdf_test_common",
    "//drivers/hdf_core/adapter/uhdf/manager:hdf_core",
    "//drivers/hdf_core/adapter/uhdf/posix:hdf_posix_osal",
  ]
  public_deps = [ "//third_party/bounds_checking_function:libsec_shared" ]
  cflags = [
    "-Wall",
    "-Wextra",
    "-Werror",
    "-fsigned-char",
    "-fno-common",
    "-fno-strict-aliasing",
  ]
}

unittest("hdf_adapter_uhdf_test_pm") {
  output_extension = "bin"
  output_dir = "$root_out_dir/test/unittest/hdf"
  include_dirs = [
    "//third_party/googletest/googletest/include",
    "//third_party/bounds_checking_function/include",
    "//drivers/hdf_core/framework/include/platform",
    "//drivers/hdf_core/framework/include/core",
    "//drivers/hdf_core/framework/core/common/include/host",
    "//drivers/hdf_core/framework/core/shared/include",
    "//drivers/hdf_core/framework/include/osal",
    "//drivers/hdf_core/adapter/uhdf/posix/include",
    "//drivers/hdf_core/framework/include/utils",
    "//drivers/hdf_core/framework/include",
    "//drivers/hdf_core/framework/test/unittest/include",
    "//drivers/hdf_core/framework/test/unittest/manager",
    "//drivers/hdf_core/framework/test/unittest/pm",
    "//base/hiviewdfx/hilog_lite/interfaces/native/innerkits",
  ]

  defines = [ "__USER__" ]
  sources = [ "//drivers/hdf_core/framework/core/manager/test/unittest/common/hdf_pm_test.cpp" ]
  deps = [
    "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_shared",
    "//drivers/hdf_core/adapter/build/test_common:libhdf_test_common",
    "//drivers/hdf_core/adapter/uhdf/manager:hdf_core",
    "//drivers/hdf_core/adapter/uhdf/posix:hdf_posix_osal",
  ]
  public_deps = [ "//third_party/bounds_checking_function:libsec_shared" ]
  cflags = [
    "-Wall",
    "-Wextra",
    "-Werror",
    "-fsigned-char",
    "-fno-common",
    "-fno-strict-aliasing",
  ]
}
