# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/test.gni")

unittest("hdf_adapter_uhdf_test_osal") {
  output_extension = "bin"
  output_dir = "$root_out_dir/test/unittest/hdf"
  include_dirs = [
    "//third_party/googletest/googletest/include",
    "//third_party/bounds_checking_function/include",
    "//drivers/hdf_core/framework/include/platform",
    "//drivers/hdf_core/framework/include/core",
    "//drivers/hdf_core/framework/include/osal",
    "//drivers/hdf_core/adapter/uhdf/posix/include",
    "//drivers/hdf_core/framework/include/utils",
    "//drivers/hdf_core/framework/include",
    "//drivers/hdf_core/framework/test/unittest/include",
    "//drivers/hdf_core/framework/test/unittest/osal",
    "//base/hiviewdfx/hilog_lite/interfaces/native/innerkits",
  ]

  defines = [ "__USER__" ]
  sources = [ "//drivers/hdf_core/framework/support/posix/test/unittest/common/hdf_osal_test.cpp" ]
  deps = [
    "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_shared",
    "//drivers/hdf_core/adapter/build/test_common:libhdf_test_common",
    "//drivers/hdf_core/adapter/uhdf/manager:hdf_core",
    "//drivers/hdf_core/adapter/uhdf/posix:hdf_posix_osal",
  ]
  public_deps = [ "//third_party/bounds_checking_function:libsec_shared" ]
  cflags = [
    "-Wall",
    "-Wextra",
    "-Werror",
    "-fsigned-char",
    "-fno-common",
    "-fno-strict-aliasing",
  ]
}

unittest("hdf_adapter_uhdf_test_osal_posix") {
  output_extension = "bin"
  output_dir = "$root_out_dir/test/unittest/hdf"
  include_dirs = [
    "//third_party/googletest/googletest/include",
    "//third_party/bounds_checking_function/include",
    "//drivers/hdf_core/framework/include/platform",
    "//drivers/hdf_core/framework/include/core",
    "//drivers/hdf_core/framework/include/osal",
    "//drivers/hdf_core/adapter/uhdf/posix/include",
    "//drivers/hdf_core/framework/include/utils",
    "//drivers/hdf_core/framework/include",
    "//drivers/hdf_core/framework/test/unittest/include",
    "//drivers/hdf_core/framework/test/unittest/osal",
    "//base/hiviewdfx/hilog_lite/interfaces/native/innerkits",
  ]

  defines = [ "__USER__" ]
  sources = [
    "//drivers/hdf_core/framework/support/posix/test/unittest/common/hdf_osal_test_posix.cpp",
    "//drivers/hdf_core/framework/test/unittest/osal/osal_all_test.c",
    "//drivers/hdf_core/framework/test/unittest/osal/osal_get_case_test.c",
    "//drivers/hdf_core/framework/test/unittest/osal/osal_list_test.c",
  ]
  deps = [
    "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_shared",
    "//drivers/hdf_core/adapter/uhdf/manager:hdf_core",
    "//drivers/hdf_core/adapter/uhdf/posix:hdf_posix_osal",
  ]
  public_deps = [ "//third_party/bounds_checking_function:libsec_shared" ]
  cflags = [
    "-Wall",
    "-Wextra",
    "-Werror",
    "-fsigned-char",
    "-fno-common",
    "-fno-strict-aliasing",
  ]
}
