# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_output_path = "hdf/osal"
ohos_unittest("hdf_adapter_uhdf_test_osal") {
  module_out_path = module_output_path

  include_dirs = [
    "//drivers/hdf_core/framework/include/platform",
    "//drivers/hdf_core/framework/include/core",
    "//drivers/hdf_core/framework/include/osal",
    "//drivers/hdf_core/adapter/uhdf/posix/include",
    "//drivers/hdf_core/framework/include/utils",
    "//drivers/hdf_core/framework/include",
    "//drivers/hdf_core/framework/test/unittest/include",
    "//drivers/hdf_core/framework/test/unittest/osal",
  ]

  defines = [ "__USER__" ]
  sources = [ "//drivers/hdf_core/framework/support/posix/test/unittest/common/hdf_osal_test.cpp" ]
  deps = [
    "//drivers/hdf_core/adapter/build/test_common:libhdf_test_common",
    "//drivers/hdf_core/adapter/uhdf2/utils:libhdf_utils",
  ]
  resource_config_file =
      "//drivers/hdf_core/adapter/uhdf2/test/resource/osal/ohos_test.xml"
  cflags = [
    "-Wall",
    "-Wextra",
    "-Werror",
    "-fsigned-char",
    "-fno-common",
    "-fno-strict-aliasing",
  ]
  if (is_standard_system) {
    external_deps = [
      "hiviewdfx_hilog_native:libhilog",
      "utils_base:utils",
    ]
  } else {
    external_deps = [ "hilog:libhilog" ]
  }
}

ohos_unittest("hdf_adapter_uhdf_test_osal_posix") {
  module_out_path = module_output_path

  include_dirs = [
    "//drivers/hdf_core/framework/include/platform",
    "//drivers/hdf_core/framework/include/core",
    "//drivers/hdf_core/framework/include/osal",
    "//drivers/hdf_core/adapter/uhdf/posix/include",
    "//drivers/hdf_core/framework/include/utils",
    "//drivers/hdf_core/framework/include",
    "//drivers/hdf_core/framework/test/unittest/include",
    "//drivers/hdf_core/framework/test/unittest/osal",
  ]

  defines = [ "__USER__" ]
  sources = [
    "//drivers/hdf_core/framework/support/posix/test/unittest/common/hdf_osal_test_posix.cpp",
    "//drivers/hdf_core/framework/test/unittest/osal/osal_all_test.c",
    "//drivers/hdf_core/framework/test/unittest/osal/osal_get_case_test.c",
    "//drivers/hdf_core/framework/test/unittest/osal/osal_list_test.c",
  ]
  deps = [ "//drivers/hdf_core/adapter/uhdf2/utils:libhdf_utils" ]

  cflags = [
    "-Wall",
    "-Wextra",
    "-Werror",
    "-fsigned-char",
    "-fno-common",
    "-fno-strict-aliasing",
  ]
  if (is_standard_system) {
    external_deps = [
      "hiviewdfx_hilog_native:libhilog",
      "utils_base:utils",
    ]
  } else {
    external_deps = [ "hilog:libhilog" ]
  }
}
